[package]
name = "pkix"
version = "0.1.0"
authors = ["Fortanix Inc."]
license = "MPL-2.0"

repository = "https://github.com/fortanix/pkix"

[dependencies]
yasna = { version = "0.3", features = ["num-bigint", "bit-vec"] }
num-bigint = { version = "0.2", default-features = false }
num-integer = { version = "0.1", default-features = false }
bit-vec = "0.6"
lazy_static = "1"
chrono = "0.4"
b64-ct = { git = "https://github.com/fortanix/b64-ct.git" }

[dev-dependencies]
rand = "0.3"
