[package]
name = "pkix"
version = "0.1.3"
authors = ["Fortanix Inc."]
license = "MPL-2.0"
description = "TLS Certificate encoding and decoding helpers."
keywords = [ "certificate-handling" ]
categories = ["cryptography"]
repository = "https://github.com/fortanix/pkix"
exclude = [".gitignore", ".travis.yml", "bors.toml", "CODE_OF_CONDUCT.md"]

[dependencies]
yasna = { version = "0.3", features = ["num-bigint", "bit-vec"] }
num-bigint = { version = "0.2", default-features = false }
num-integer = { version = "0.1", default-features = false }
bit-vec = "0.6"
lazy_static = "1"
chrono = "0.4"
b64-ct = "0.1.1"

[dev-dependencies]
rand = "0.3"
